--- a/subprojects/docs/src/docs/userguide/artifactDependenciesTutorial.adoc
+++ b/subprojects/docs/src/docs/userguide/artifactDependenciesTutorial.adoc
@@ -51,7 +51,7 @@ What's going on here? This build script says a few things about the project. Fir
 [[configurations]]
 === Dependency configurations
 
-A Configuration is a named set of dependencies and artifacts. There are three main purposes for a Configuration:
+A <<sub:scope_of_dependency_configurations,configuration>> is a named set of dependencies and artifacts. There are three main purposes for a configuration:
 
 Declaring Dependencies::
 The plugin uses configurations to make it easy for build authors to declare what other subprojects or external artifacts are needed for various purposes during the execution of tasks defined by the plugin.
