Move content from feature preview document to user guide
To make it sustainable and easy to discover for users. The content
is reworded to fit into the existing documentation and with the new
terminology definitions. Some explanations are moved to the release
notes, which previously linked to the preview document, to better
illustrate the features there.

Features documented:
- optional dependencies
- BOM support
- compile/runtime scope separation
- metadata sources (was already added to documentation earlier,
  therefore it can also be removed from the preview doc)

--- a/subprojects/docs/src/docs/userguide/managingTransitiveDependencies.adoc
+++ b/subprojects/docs/src/docs/userguide/managingTransitiveDependencies.adoc
@@ -30,6 +30,13 @@ Dependency constraints allow you to define the version or the version range of b
 
 In the example, all versions are omitted from the dependency declaration. Instead, the versions are defined in the constraints block. The version definition for `commons-codec:1.11` is only taken into account if `commons-codec` is brought in as transitive dependency, since `commons-codec` is not defined as dependency in the project. Otherwise, the constraint has no effect.
 
+Dependency constraints themselves can also be added transitively. If a modules's metadata is defined in a `.pom` file that contains dependency entries with `<optional>true</optional>`, Gradle will create a dependency constraint for each of these so-called _optional dependencies_. This leads to a similar resolution behavior as provided by Maven: if the corresponding module is brought in by another, non-optional dependency declaration, then the constraint will apply when choosing the version for that module (e.g., if the optional dependency defines a higher version, that one is chosen).
+
+[NOTE]
+====
+Support for _optional dependencies_ from pom files is active by default with Gradle 5.0+. For using it in Gradle 4.6+, you need to activate it by setting `org.gradle.advancedpomsupport=true` in gradle.properties.
+====
+
 [[sec:excluding_transitive_module_dependencies]]
 === Excluding transitive module dependencies
 
@@ -140,3 +147,23 @@ A project can decide to disable transitive dependency resolution completely. You
     <sourcefile file="build.gradle" snippet="transitive-per-configuration"/>
 </sample>
 ++++
+
+[[sec:bom_import]]
+=== Importing dependency constraints from Maven BOMs
+
+Gradle provides support for importing https://maven.apache.org/guides/introduction/introduction-to-dependency-mechanism.html#Importing_Dependencies[bill of materials (BOM) files], which are effectively `.pom` files that use `<dependencyManagement>` to control the dependency versions of direct and transitive dependencies. The BOM support in Gradle works similar to using `<scope>import</scope>` when depending on a BOM in Maven. In Gradle however, it is done via a regular dependency declaration on the BOM:
+
+++++
+<sample id="importing-dependency-constraints-from-bom" dir="userguide/dependencyManagement/managingTransitiveDependencies/importingDependencyConstraintsFromBOM" title="Depending on a BOM to import its dependency constraints">
+    <sourcefile file="build.gradle" snippet="dependency-on-bom"/>
+</sample>
+++++
+
+In the example, the versions of `gson` and `dom4j` are provided by the Spring Boot BOM. This way, if you are developing for a platform like Spring Boot, you do not have to declare any versions yourself but can rely on the versions the platform provides.
+
+Gradle treats all entries in the `<dependencyManagement>` block of a BOM similar to <<sec:dependency_constraints,Gradle's dependency constraints>>. This means that any version defined in the `<dependencyManagement>` block can impact the dependency resolution result. In order to qualify as a BOM, a `.pom` file needs to have `<packaging>pom</packaging>` set.
+
+[NOTE]
+====
+Importing dependency constraints from Maven BOMs is active by default with Gradle 5.0+. For using it in Gradle 4.6+, you need to activate it by setting `org.gradle.advancedpomsupport=true` in gradle.properties.
+====
